2024-09-02T01:36:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10659258668 # 406
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-02
* notice: last 14d: unq all: 4 6
* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 412 802
* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 413 803
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-01]

2024-08-29T01:34:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10607139426 # 402
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-29
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 411 801
* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 412 802
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-08-28]

2024-08-24T01:23:25Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10534544472 # 397
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-24
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 410 800
* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 411 801
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-08-23]

2024-08-23T01:24:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10518251563 # 396