@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-02T01:36:40Z",
-  "count_outdated" : 797,
-  "uniques_outdated" : 407,
-  "count" : 803,
-  "uniques" : 413,
+  "timestamp" : "2024-09-03T01:34:07Z",
+  "count_outdated" : 798,
+  "uniques_outdated" : 408,
+  "count" : 804,
+  "uniques" : 414,
   "clones" : [
-    {
-      "timestamp": "2024-08-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-08-21T00:00:00Z",
       "count": 1,
@@ -52,6 +43,15 @@
     },
     {
       "timestamp": "2024-09-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
