@@ -1,12 +1,7 @@
 {
   "count": 6,
-  "uniques": 4,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-08-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-08-21T00:00:00Z",
       "count": 1,
@@ -29,6 +24,11 @@
     },
     {
       "timestamp": "2024-09-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
